<resources>
    <string name="app_name">book</string>

    <string name="action_add_bookmark">添加书签</string>
    <string name="choose_all">全选</string>
    <string name="delete">取消</string>

    <string name="read_setting_directory">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_day">日间</string>
    <string name="read_setting_pagemode">翻页</string>
    <string name="read_setting_set">设置</string>
    <string name="read_setting_pre">上一章</string>
    <string name="read_setting_next">下一章</string>

    <string name="setting_system">跟随系统</string>
    <string name="setting_dark">暗</string>
    <string name="setting_bright">亮</string>
    <string name="setting_add">A+</string>
    <string name="setting_subtract">A-</string>
    <string name="setting_default">默认字体大小</string>

    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_cover">覆盖</string>
    <string name="page_mode_slide">滑动</string>
    <string name="page_mode_none">无</string>

</resources>
